Fixed shop nav too close to the border in mobile.

--- a/ourdailyapp/src/ComponentsNotReuse/shopNav/shopNav.style.scss
+++ b/ourdailyapp/src/ComponentsNotReuse/shopNav/shopNav.style.scss
@@ -2,7 +2,7 @@
   position: fixed;
 
   bottom: 5%;
-  right: 8%;
+  right: 10%;
   z-index: 1;
 
   border: 2px solid red;
